public class Vazio extends Conteudo{
}
