public abstract class Quadrado {

}
